cryptpad/cryptpad-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/instance: cryptpad
  name: cryptpad
  namespace: cryptpad
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: cryptpad-certificate
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: Same
      name: ws
      port: 3003
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: cryptpad-certificate
        mode: Terminate
