cryptpad/cryptpad-gw.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cryptpad
  namespace: cryptpad
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: cryptpad-certificate
    - name: ws
      port: 3003
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: cryptpad-certificate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cryptpad-http
  namespace: cryptpad
spec:
  parentRefs:
    - name: cryptpad
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - cryptpad.raft.lutris.house
  rules:
    - backendRefs:
        - name: cryptpad
          port: 3000
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cryptpad-ws
  namespace: cryptpad
spec:
  parentRefs:
    - name: cryptpad
      sectionName: ws
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - cryptpad.raft.lutris.house
  rules:
    - backendRefs:
        - name: cryptpad
          port: 3003
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
