cryptpad/cryptpad-http-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cryptpad-http
  namespace: cryptpad
spec:
  parentRefs:
    - name: cryptpad
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - cryptpad.raft.lutris.house
  rules:
    - backendRefs:
        - name: cryptpad
          port: 3000
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
