cryptpad/cryptpad-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: cryptpad
  name: cryptpad
  namespace: cryptpad
spec:
  hostnames:
    - cryptpad.raft.lutris.house
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cryptpad
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cryptpad
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
