cryptpad/cryptpad-ws-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  generation: 1
  labels:
    app.kubernetes.io/instance: cryptpad
  name: cryptpad-ws
  namespace: cryptpad
spec:
  hostnames:
    - cryptpad.raft.lutris.house
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cryptpad
      sectionName: ws
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cryptpad
          port: 3003
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
